Añadí Css al proyecto

--- a/package.json
+++ b/package.json
@@ -1,27 +1,27 @@
 {
-<<<<<<< HEAD
-  "name": "bienesraices",
+  "name": "quiz-ekj",
   "version": "1.0.0",
-  "description": "Curso Desarrollo Web Completo",
-=======
-  "name": "quizekj",
-  "version": "1.0.0",
-  "description": "Quiz con respuesta personalizada",
->>>>>>> 34fb77506813a64e95cbe5c99e0da56264e17538
+  "description": "Quiz para Ekklesia Juvenil con respuestas personalizadas",
   "main": "gulpfile.js",
   "scripts": {
-    "dev": "gulp"
+    "sass": "sass --watch src / scss:build/css",
+    "tarea": "gulp tarea",
+    "dev": "gulp dev"
   },
-<<<<<<< HEAD
-  "author": "Juan De La Torre",
-=======
-  "author": "Isaias Castillo",
->>>>>>> 34fb77506813a64e95cbe5c99e0da56264e17538
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/isaicastillo13/Quiz-EKJ.git"
+  },
+  "author": "IsaiasCastillo",
   "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/isaicastillo13/Quiz-EKJ/issues"
+  },
+  "homepage": "https://github.com/isaicastillo13/Quiz-EKJ#readme",
   "devDependencies": {
-    "cssnano": "^5.1.0",
+    "autoprefixer": "^10.4.15",
+    "cssnano": "^6.0.1",
     "gulp": "^4.0.2",
-    "gulp-autoprefixer": "^8.0.0",
     "gulp-cache": "^1.1.3",
     "gulp-clean": "^0.4.0",
     "gulp-concat": "^2.6.1",
@@ -33,7 +33,6 @@
     "gulp-sourcemaps": "^3.0.0",
     "gulp-terser-js": "^5.2.2",
     "gulp-webp": "^4.0.1",
-    "sass": "^1.49.9",
-    "terser": "^4.8.0"
+    "sass": "^1.66.1"
   }
 }
